@@ -1,7 +1,7 @@
 package uk.co.m4numbers.csc8102.partone;
 
 /*
- * Copyright 2016 M. D. Ball (m.d.ball2@ncl.ac.uk)
+ * Copyright 2016 M. D. Ball (m4numbers@gmail.com)
  * <p/>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,7 @@ import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
 import java.security.*;
-import java.util.Arrays;
+import java.util.Base64;
 
 /**
  * Class Name - EncryptionDecryption
@@ -42,23 +42,17 @@ public class EncryptionDecryption
      * @param password The password that we hash in order to get our keys and
      *                 codes
      *
-     * @return A collection object of a 16-byte AES key and a 16-byte MAC code
+     * @return A the 32-byte secret AES key
      *
      * @throws NoSuchAlgorithmException If SHA-256 doesn't exist or cannot be
      *                                  used
      */
-    private DerivedKeys derive_keys(byte[] password)
+    private byte[] derive_key(byte[] password)
             throws NoSuchAlgorithmException
     {
         MessageDigest md = MessageDigest.getInstance("SHA-256");
         md.update(password);
-        byte[] digest = md.digest();
-        return new DerivedKeys(
-                //AES key
-                Utils.split_byte_array(digest, 0, 16),
-                //MAC code
-                Utils.split_byte_array(digest, 16, 32)
-        );
+        return md.digest();
     }
 
     /**
@@ -76,36 +70,11 @@ public class EncryptionDecryption
     }
 
     /**
-     * Generate a 20-byte message signature according to all the input data
-     * that we used to generate this message
-     *
-     * @param iv         The initial vector (hashed with the ciphertext)
-     * @param ciphertext The ciphertext itself (hashed with the iv)
-     * @param mac        The mac code that we use as a secret key for signing the
-     *                   message
-     *
-     * @return A 20-byte HMAC output to be attached to the encrypted file
-     *
-     * @throws NoSuchAlgorithmException If HmacSHA1 doesn't exist
-     * @throws InvalidKeyException      If HmacSHA1 can't be used on the key
-     */
-    private byte[] generate_hmac(byte[] iv, byte[] ciphertext, byte[] mac)
-            throws NoSuchAlgorithmException, InvalidKeyException
-    {
-        Mac           mac_cipher = Mac.getInstance("HmacSHA1");
-        SecretKeySpec signing    = new SecretKeySpec(mac, "HmacSHA1");
-        mac_cipher.init(signing);
-
-        return mac_cipher
-                .doFinal(Utils.concatenate_byte_arrays(iv, ciphertext));
-    }
-
-    /**
      * Generate the ciphertext from the given data via the cipher as given in
      * the coursework specification (of AES in CBC mode using PKC5 padding).
      *
      * @param iv        16-byte random data
-     * @param key       16-byte AES key
+     * @param key       32-byte AES key
      * @param plaintext plaintext bytes to encrypt
      *
      * @return The ciphertext according to our inputs
@@ -129,7 +98,7 @@ public class EncryptionDecryption
      * of the AES/CBC block cipher and we're golden.
      *
      * @param iv         16-byte random data
-     * @param key        16-byte AES key
+     * @param key        32-byte AES key
      * @param ciphertext plaintext bytes to encrypt
      *
      * @return The plaintext that this ciphertext once was
@@ -162,23 +131,21 @@ public class EncryptionDecryption
     {
         //Read in the plaintext and get the two halves of our keys for later
         String      plaintext = Utils.read_file(filename);
-        DerivedKeys key_set   = derive_keys(password.getBytes("utf-8"));
+        byte[] aes_key   = derive_key(password.getBytes("utf-8"));
 
         byte[] iv = generate_initial_vector();
-        byte[] ciphertext = generate_ciphertext(iv, key_set.aes_key,
+        byte[] ciphertext = generate_ciphertext(iv, aes_key,
                                                 plaintext.getBytes("utf-8")
         );
-        byte[] hmac = generate_hmac(iv, ciphertext, key_set.mac_code);
 
         //Join all of our parts together to create our final output byte array
         // that we pass to be written to file
-        byte[] joined = Utils.concatenate_byte_arrays(
-                Utils.concatenate_byte_arrays(iv, ciphertext), hmac);
+        byte[] joined = Utils.concatenate_byte_arrays(iv, ciphertext);
 
         //Write to the encrypted file in a more stable way
         Utils.write_to_file(
-                new sun.misc.BASE64Encoder().encode(joined).getBytes("utf-8"),
-                filename + ".8102"
+                Base64.getEncoder().encode(joined),
+                filename + ".aes"
         );
 
         //Now delete the original file
@@ -200,38 +167,26 @@ public class EncryptionDecryption
     public void decrypt(String filename, String password) throws Exception
     {
         //Read in and decode the data from the given file
-        byte[] encrypted_file = new sun.misc.BASE64Decoder().decodeBuffer(
+        byte[] encrypted_file = Base64.getDecoder().decode(
                 Utils.read_file(filename));
 
         //Split apart the encrypted file into its constituent parts
         byte[] iv = Utils.split_byte_array(encrypted_file, 0, 16);
         byte[] ciphertext = Utils.split_byte_array(encrypted_file, 16,
-                                                   encrypted_file.length - 20
+                                                   encrypted_file.length
         );
-        byte[] hmac = Utils
-                .split_byte_array(encrypted_file, encrypted_file.length - 20,
-                                  encrypted_file.length
-                );
 
-        //Derive the keys and generate a HMAC from what we have currently
-        DerivedKeys key_set   = derive_keys(password.getBytes("utf-8"));
-        byte[]      test_hmac = generate_hmac(iv, ciphertext, key_set.mac_code);
-
-        //If our generated HMAC doesn't match the one in the file... we have
-        // problems
-        if (!Arrays.equals(test_hmac, hmac))
-        {
-            throw new Exception("Wrong password or possibly corrupted file");
-        }
+        //Derive the secret key
+        byte[] aes_key   = derive_key(password.getBytes("utf-8"));
 
         //Since we've reached this point, everything's valid, so let's
         // regenerate the plaintext from the ciphertext
         byte[] plaintext = regenerate_plaintext(
-                iv, key_set.aes_key, ciphertext);
+                iv, aes_key, ciphertext);
 
         //And write the decrypted output to the original filename
         Utils.write_to_file(
-                plaintext, filename.substring(0, filename.length() - 5));
+                plaintext, filename.substring(0, filename.length() - 4));
 
         //Finally, delete the old encrypted file and finish up
         if (!Utils.delete_file(filename))
